# DemoFFmpeg

./: .gitignore  android-app.gradle  android-library.gradle  build.gradle  config.gradle  gradle.properties  module.gradle  settings.gradle  txt.txt
app/: DEMOC.MD  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/glsl/: fragment.glsl  vetex.glsl
app/src/main/cpp/: CMakeLists.txt  DEMOC.MD  native-ffmpegrender.cpp  native-player.cpp  native-render.cpp
app/src/main/cpp/ffmpegsamples/capturer/: AudioRecordPlayHelper.cpp  AudioRecordPlayHelper.h
app/src/main/cpp/ffmpegsamples/encode/: EncodeYuvToJpg.cpp  EncodeYuvToJpg.h  FFmpegEncodeAVToLiveRtmp.h  FFmpegEncodeAVToMp4.cpp  FFmpegEncodeAVToMp4.h  FFmpegEncodeAudio.cpp  FFmpegEncodeAudio.h  FFmpegEncodeVideo.cpp  FFmpegEncodeVideo.h  SwsConvertYuvToPng.cpp  SwsConvertYuvToPng.h  SwsHelper.cpp  SwsHelper.h
app/src/main/cpp/ffmpegsamples/filters/: EncodeYuvToYuvByFilter.cpp  EncodeYuvToYuvByFilter.h  WaterFilterHelper.cpp
app/src/main/cpp/ffmpegsamples/io/: CustomOnlineIoHelper.cpp
app/src/main/cpp/ffmpegsamples/muxer/: CustomDemuxer.cpp  CustomDemuxer.h  CustomMuxer.cpp
app/src/main/cpp/ffmpegsamples/rtmp/: RtmpClient.cpp  RtmpClient.h
app/src/main/cpp/ffmpegsamples/swscale/: ConvertMp4ToFlv.cpp  ConvertMp4ToFlv.h  SwsConvertYuvToRgb.cpp  SwsConvertYuvToRgb.h
app/src/main/cpp/include/libavutil/: common.h
app/src/main/cpp/include/openssl/: opensslconf.h
app/src/main/cpp/opengles_samples/: EglContext.cpp
app/src/main/cpp/render/: AudioRender.cpp  AudioRender.h  BaseRender.h  OpenGLFFmpegDecoder.cpp  OpenGLFFmpegDecoder.h  OpenGLFFmpegRender.cpp  OpenGLFFmpegRender.h  OpenSLESRender.h  PlayMp4Instance.cpp  PlayMp4Instance.h  PlayMp4Practice.cpp  PlayMp4Practice.h  VideoGLRender.cpp  VideoGLRender.h  VideoRender.cpp  VideoRender.h  VideoRenderInterface.h  YuvToImageRender.cpp  YuvToImageRender.h
app/src/main/cpp/sample/: AntiAliasSample.cpp  BlendSample.cpp  BlendSample.h  CoordinateSystemSample.cpp  CoordinateSystemSample.h  DepthTestSample.cpp  EGLRender.cpp  EGLRender.h  GLBaseSample.h  GLEglSample.cpp  GLEglSample.h  GLFBOSample.cpp  GLFBOSample.h  GLVBOEBOSample.cpp  GLVBOEBOSample.h  GLYuvSample.cpp  GLYuvSample.h  InstanceCopySample.cpp  InstanceCopySample.h  InstanceSample.cpp  InstanceSample.h  LightSample.cpp  LightSample.h  Model3DSample.cpp  Model3DSample.h  ParticlesSample.cpp  ParticlesSample.h  SeniorGLSLSample.h  ShadowCubeSample.cpp  ShadowCubeSample.h  ShadowSample.cpp  ShadowSample.h  TestFBOSample.cpp  TestFBOSample.h  TextureCubeSample.cpp  TextureCubeSample.h  TextureMapSample.cpp  TextureMapSample.h  TextureSample.cpp  TextureSample.h  (+2 more)
app/src/main/cpp/sample/model/: Mesh.h  Model.h  mesh.h  model.h  shader.h
app/src/main/cpp/test/: MyGLRenderContext.cpp  MyGLRenderContext.h  utils.h
app/src/main/cpp/utils/: CustomGLUtils.cpp  CustomGLUtils.h  CustomSafeQueue.h  GLUtils.cpp  GLUtils.h  ImageDef.h  JavaVmManager.cpp  JavaVmManager.h  OpenGLImageDef.h  OpenSL_IO.cpp  OpenSL_IO.h  SingleNodeList.cpp  SingleNodeList.h  TimeAsyncHelper.cpp  TimeAsyncHelper.h  TimeTracker.cpp  TimeTracker.h  camera.h  opensl_io.c  utils.h
app/src/main/cpp/utils/helpers/: TimeAsyncHelper.cpp
app/src/main/res/layout/: activity_f_fmpeg_encode.xml  activity_f_fmpeg_encode_a_v_to_mp4.xml  activity_f_fmpeg_encode_audio.xml  activity_f_fmpeg_encode_video.xml  activity_f_fmpeg_hw_encode_muxer.xml  activity_f_fmpeg_native_window.xml  activity_f_fmpeg_navigation.xml  activity_f_fmpeg_open_g_l.xml  activity_f_fmpeg_video.xml  activity_ffmpeg_about.xml  activity_ffmpeg_opengl_window.xml  activity_main.xml  activity_native_egl_test.xml  activity_native_open_g_l_e_s_actiivty.xml  activity_open_g_l_image_reader.xml  activity_rtmp_java_hw.xml  activity_splash.xml  dialog_siamples.xml  ffmpeg_test_newcamerahelper.xml  open_gles_layout.xml
app/src/main/res/values/: strings.xml  styles.xml
avutils/: build.gradle
avutils/src/main/: AndroidManifest.xml
common_base/: build.gradle
common_base/src/main/: AndroidManifest.xml
common_base/src/main/res/: AndroidManifest.xml
common_base/src/main/res/values/: strings.xml
customplayer/: .gitignore  NOTICE.MD  build.gradle
customplayer/src/main/: AndroidManifest.xml
customplayer/src/main/assets/: test.txt
customplayer/src/main/cpp/: CmakeLists.txt  native-customplayer.cpp  native-mediacontroller.cpp  native-mediamuxer.cpp  native-opus.cpp  native-player.cpp
customplayer/src/main/cpp/include/: MathFunctions.h
customplayer/src/main/proto/: addressBook.proto
customplayer/src/main/res/layout/: activity_camera_learn.xml  activity_capture_video.xml  activity_custom_player_list.xml  activity_f_fmpeg_muxer.xml  activity_gles_ffmpeg_muxer.xml  activity_opus_operation.xml  activity_player_detail.xml  activity_player_surface.xml  activity_test.xml  activity_test2.xml  activity_webrtc.xml  item_video_list.xml
customplayer/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
ffmpegsamples/: README.md  build.gradle
ffmpegsamples/src/main/: AndroidManifest.xml
ffmpegsamples/src/main/cpp/: CMakeLists.txt  native-ffmpegrender.cpp
ffmpegsamples/src/main/cpp/examples/: qsvdec.c
ffmpegsamples/src/main/cpp/opengles_samples/: EglContext.cpp  EglContext.h
ffmpegsamples/src/main/cpp/render/: AudioRender.h  Mp4Demo.cpp  Mp4Demo.h  OpenGLFFmpegDecoder.h  OpenGLFFmpegRender.h  OpenSLESRender.cpp  PlayMp4Practice.cpp  VideoGLRender.h  VideoRender.cpp  VideoRender.h  YuvToImageRender.h
ffmpegsamples/src/main/cpp/sample/: AntiAliasSample.h  BlendSample.cpp  BlendSample.h  CoordinateSystemSample.cpp  CoordinateSystemSample.h  DepthTestSample.h  EGLRender.h  GLBaseSample.h  GLEglSample.h  GLFBOSample.cpp  (+18 more)
gradle/wrapper/: gradle-wrapper.properties
ijkplayer-demo/: build.gradle
ijkplayer-demo/src/main/: AndroidManifest.xml
libyuv-single/: build.gradle
linphonedemo/: build.gradle
linphonedemo/src/main/: AndroidManifest.xml
old_files/: SingleNodeList.h  SingleNodeList.hpp  native-render.cpp
old_files/main/: AndroidManifest.xml
(+574 files in other folders)
